--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -22,9 +22,16 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
+    - name: Install dependencies
       run: |
         touch .env.development
         echo "${{ secrets.ENV_FILE }}" > .env.development
         npm install
+
+    - name: Install Gulp CLI globally
+      run: |
+        npm install -g gulp-cli
+
+    - name: Run Gulp
+      run: |
         gulp
