--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -6,11 +6,7 @@ on:
     
 jobs:
   build:
-    runs-on: self-hosted  # Using a self-hosted runner
-
-    strategy:
-      matrix:
-        node-version: [22.x]
+    runs-on: self-hosted  # Ensure this is the correct label for your runner
 
     steps:
     - uses: actions/checkout@v4
@@ -18,35 +14,24 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Ensure Docker permissions
+      run: sudo chmod 666 /var/run/docker.sock
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: |
-        touch .env.development
-        echo "${{ secrets.ENV_FILE }}" > .env.development
-        npm install
-
-    - name: Install Gulp locally
-      run: |
-        npm install gulp --save-dev
-
     - name: Build Docker image using Dockerfile
       run: |
-        docker build -t myusername/myapp:${{ github.sha }} .
+        sudo docker build -t myusername/myapp:${{ github.sha }} .
 
     - name: Run Docker Compose
       run: |
-        docker-compose -f docker-compose.yml up --build -d
+        sudo docker-compose -f docker-compose.yml up --build -d
 
     - name: Run Gulp inside Docker container
       run: |
-        docker-compose exec <service-name> npx gulp  # Replace <service-name> with your Docker service name
+        sudo docker-compose exec <service-name> npx gulp
+
